--- a/Fast.ai/22p2/01_matmul.ipynb
+++ b/Fast.ai/22p2/01_matmul.ipynb
@@ -73,12 +73,12 @@
       "metadata": {
         "id": "ZWbCyXL7iOWM"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "EpCMoLYDhA1S"
       },
@@ -90,10 +90,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "id": "yvvOZzTOhA1T",
-        "outputId": "567457db-0243-475b-8bd6-d91822b57514",
+        "outputId": "60dd88d1-f215-45e1-9ca7-3b50f2680ed6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -104,7 +104,7 @@
           "name": "stdout",
           "text": [
             "total 16656\n",
-            "-rw-r--r-- 1 root root 17051982 Sep 27 22:11 mnist.pkl.gz\n"
+            "-rw-r--r-- 1 root root 17051982 Oct  1 21:11 mnist.pkl.gz\n"
           ]
         }
       ],
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "id": "WNGCpXX6hA1T"
       },
@@ -125,10 +125,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
         "id": "lwikyeKuhA1T",
-        "outputId": "8245715e-c058-48a3-e42b-e32ee2ca4ba5",
+        "outputId": "a89e50db-e5fb-49c9-8467-1c1b50b1bfb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -151,7 +151,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 6
         }
       ],
       "source": [
@@ -167,12 +167,12 @@
       ],
       "metadata": {
         "id": "NdMNoBonjSwP",
-        "outputId": "81d7d778-e876-4200-cbc0-789b933a8c2c",
+        "outputId": "a442e46f-c8b8-4e86-dbb1-bdc395c59c10",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -182,13 +182,13 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "tr4cJfn6hA1T"
       },
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "rOH2TPKohA1T",
         "outputId": "e1100487-f662-440c-c070-0c058732ed10",
@@ -240,7 +240,7 @@
       "metadata": {
         "id": "ii6XaB5wkAe8"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -255,7 +255,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,7 +281,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -307,7 +307,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -333,7 +333,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -359,7 +359,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -386,7 +386,7 @@
           "height": 144
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -403,7 +403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "pEDDXlT4hA1T",
         "outputId": "c2efe909-615c-4417-bea1-a0fad6308ced",
@@ -440,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "IZqdIsUThA1T"
       },
@@ -451,7 +451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "V072BNPshA1T",
         "outputId": "607f602b-2913-467f-f242-459fd0318dd5",
@@ -501,7 +501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "8XTI3q9shA1T",
         "outputId": "3d228cb4-02c6-475b-c27d-38cbe8b01e58",
@@ -527,7 +527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "jFrfSnPahA1U",
         "outputId": "6e1a9b51-cf5f-4738-e40f-aa1828a61f8c",
@@ -559,7 +559,7 @@
       "metadata": {
         "id": "Df-9uhmYnkwC"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -570,7 +570,7 @@
       "metadata": {
         "id": "veMQLdJ_nsYG"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -585,7 +585,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +636,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,7 +649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "7lZNlCA5hA1U"
       },
@@ -661,7 +661,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "bR_sFjA9hA1U",
         "outputId": "3f78b910-67bb-48fc-b089-100f885e4846",
@@ -1237,7 +1237,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "import torch"
+      ],
+      "metadata": {
+        "id": "aNFmpYhN7UE2"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
       "metadata": {
         "id": "GHedqy2khA1V"
       },
@@ -1250,7 +1261,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "bias"
+      ],
+      "metadata": {
+        "id": "VhvnaBPf7MJ9",
+        "outputId": "faf56695-fe00-44a8-f819-a9d27e70e436",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
       "metadata": {
         "id": "fBBs0meNhA1V"
       },
@@ -1262,21 +1299,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "LBSVwiDShA1V",
-        "outputId": "512d45d7-d8a0-47d4-d603-ded140251d2a"
+        "outputId": "f09ad876-b35d-4e8b-ae0a-32161bea44b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(torch.Size([5, 784]), torch.Size([784, 10]))"
+              "((5, 784), torch.Size([784, 10]))"
             ]
           },
-          "execution_count": null,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 18
         }
       ],
       "source": [
