--- a/ColabEnv/Chapter 5.ipynb
+++ b/ColabEnv/Chapter 5.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,16 +479,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['s', 'i', 'n', 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(random_deletion(\"sina\", 0.1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def random_swap(sentence, n=5):\n",
+    "def random_swap(sentence=\"sina\", n=5):\n",
     "    length = range(len(sentence))\n",
     "    for _ in range(n):\n",
     "        idx1, idx2 = random.sample(length, 2)\n",
     "        sentence[idx1], sentence[idx2] = sentence[idx2], sentence[idx1]\n",
     "    return sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mrandom_swap\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[34], line 5\u001b[0m, in \u001b[0;36mrandom_swap\u001b[0;34m(sentence, n)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n\u001b[1;32m      4\u001b[0m     idx1, idx2 \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39msample(length, \u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m     sentence[idx1], sentence[idx2] \u001b[38;5;241m=\u001b[39m sentence[idx2], sentence[idx1]\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m sentence\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "random_swap()"
    ]
   },
   {
@@ -500,9 +548,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting googletrans==3.1.0a0\n",
+      "  Downloading googletrans-3.1.0a0.tar.gz (19 kB)\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: httpx==0.13.3 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from googletrans==3.1.0a0) (0.13.3)\n",
+      "Requirement already satisfied: certifi in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from httpx==0.13.3->googletrans==3.1.0a0) (2024.8.30)\n",
+      "Requirement already satisfied: hstspreload in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from httpx==0.13.3->googletrans==3.1.0a0) (2024.10.1)\n",
+      "Requirement already satisfied: sniffio in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from httpx==0.13.3->googletrans==3.1.0a0) (1.3.1)\n",
+      "Requirement already satisfied: chardet==3.* in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from httpx==0.13.3->googletrans==3.1.0a0) (3.0.4)\n",
+      "Requirement already satisfied: idna==2.* in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from httpx==0.13.3->googletrans==3.1.0a0) (2.10)\n",
+      "Requirement already satisfied: rfc3986<2,>=1.3 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from httpx==0.13.3->googletrans==3.1.0a0) (1.5.0)\n",
+      "Requirement already satisfied: httpcore==0.9.* in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from httpx==0.13.3->googletrans==3.1.0a0) (0.9.1)\n",
+      "Requirement already satisfied: h11<0.10,>=0.8 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from httpcore==0.9.*->httpx==0.13.3->googletrans==3.1.0a0) (0.9.0)\n",
+      "Requirement already satisfied: h2==3.* in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from httpcore==0.9.*->httpx==0.13.3->googletrans==3.1.0a0) (3.2.0)\n",
+      "Requirement already satisfied: hyperframe<6,>=5.2.0 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from h2==3.*->httpcore==0.9.*->httpx==0.13.3->googletrans==3.1.0a0) (5.2.0)\n",
+      "Requirement already satisfied: hpack<4,>=3.0 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from h2==3.*->httpcore==0.9.*->httpx==0.13.3->googletrans==3.1.0a0) (3.0.0)\n",
+      "Building wheels for collected packages: googletrans\n",
+      "  Building wheel for googletrans (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for googletrans: filename=googletrans-3.1.0a0-py3-none-any.whl size=16354 sha256=5ae398c7ab3267fa9e810da4ec0efdd0e793ba102555f335cc70050edfe49f29\n",
+      "  Stored in directory: /Users/sina/Library/Caches/pip/wheels/dd/59/af/8d6c96a719763990f1c548e36b17d9efdfb767f42f7ff39f53\n",
+      "Successfully built googletrans\n",
+      "Installing collected packages: googletrans\n",
+      "  Attempting uninstall: googletrans\n",
+      "    Found existing installation: googletrans 3.0.0\n",
+      "    Uninstalling googletrans-3.0.0:\n",
+      "      Successfully uninstalled googletrans-3.0.0\n",
+      "Successfully installed googletrans-3.1.0a0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.1.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# Install googletrans version 3.1.0a0 (temporary fix for #57)\n",
     "!pip install googletrans==3.1.0a0"
@@ -510,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -524,22 +610,238 @@
     "\n",
     "translator = googletrans.Translator()\n",
     "\n",
-    "sentences = ['The cat sat on the mat']\n",
+    "sentences = ['The Zebra on the hill']\n",
     "\n",
-    "translations_fr = translator.translate(sentences, dest='fr')\n",
+    "translations_fr = translator.translate(sentences, dest='fr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Le zèbre sur la colline']"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "fr_text = [t.text for t in translations_fr] \n",
+    "fr_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The zebra on the hill']\n"
+     ]
+    }
+   ],
+   "source": [
     "translations_en = translator.translate(fr_text, dest='en')\n",
     "en_text = [t.text for t in translations_en]\n",
-    "print(en_text)   \n",
-    "\n",
+    "print(en_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['af',\n",
+       " 'sq',\n",
+       " 'am',\n",
+       " 'ar',\n",
+       " 'hy',\n",
+       " 'az',\n",
+       " 'eu',\n",
+       " 'be',\n",
+       " 'bn',\n",
+       " 'bs',\n",
+       " 'bg',\n",
+       " 'ca',\n",
+       " 'ceb',\n",
+       " 'ny',\n",
+       " 'zh-cn',\n",
+       " 'zh-tw',\n",
+       " 'co',\n",
+       " 'hr',\n",
+       " 'cs',\n",
+       " 'da',\n",
+       " 'nl',\n",
+       " 'en',\n",
+       " 'eo',\n",
+       " 'et',\n",
+       " 'tl',\n",
+       " 'fi',\n",
+       " 'fr',\n",
+       " 'fy',\n",
+       " 'gl',\n",
+       " 'ka',\n",
+       " 'de',\n",
+       " 'el',\n",
+       " 'gu',\n",
+       " 'ht',\n",
+       " 'ha',\n",
+       " 'haw',\n",
+       " 'iw',\n",
+       " 'he',\n",
+       " 'hi',\n",
+       " 'hmn',\n",
+       " 'hu',\n",
+       " 'is',\n",
+       " 'ig',\n",
+       " 'id',\n",
+       " 'ga',\n",
+       " 'it',\n",
+       " 'ja',\n",
+       " 'jw',\n",
+       " 'kn',\n",
+       " 'kk',\n",
+       " 'km',\n",
+       " 'ko',\n",
+       " 'ku',\n",
+       " 'ky',\n",
+       " 'lo',\n",
+       " 'la',\n",
+       " 'lv',\n",
+       " 'lt',\n",
+       " 'lb',\n",
+       " 'mk',\n",
+       " 'mg',\n",
+       " 'ms',\n",
+       " 'ml',\n",
+       " 'mt',\n",
+       " 'mi',\n",
+       " 'mr',\n",
+       " 'mn',\n",
+       " 'my',\n",
+       " 'ne',\n",
+       " 'no',\n",
+       " 'or',\n",
+       " 'ps',\n",
+       " 'fa',\n",
+       " 'pl',\n",
+       " 'pt',\n",
+       " 'pa',\n",
+       " 'ro',\n",
+       " 'ru',\n",
+       " 'sm',\n",
+       " 'gd',\n",
+       " 'sr',\n",
+       " 'st',\n",
+       " 'sn',\n",
+       " 'sd',\n",
+       " 'si',\n",
+       " 'sk',\n",
+       " 'sl',\n",
+       " 'so',\n",
+       " 'es',\n",
+       " 'su',\n",
+       " 'sw',\n",
+       " 'sv',\n",
+       " 'tg',\n",
+       " 'ta',\n",
+       " 'te',\n",
+       " 'th',\n",
+       " 'tr',\n",
+       " 'uk',\n",
+       " 'ur',\n",
+       " 'ug',\n",
+       " 'uz',\n",
+       " 'vi',\n",
+       " 'cy',\n",
+       " 'xh',\n",
+       " 'yi',\n",
+       " 'yo',\n",
+       " 'zu']"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "available_langs = list(googletrans.LANGUAGES.keys())\n",
+    "available_langs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Translating to spanish\n"
+     ]
+    }
+   ],
+   "source": [
     "tr_lang = random.choice(available_langs)\n",
-    "print(f\"Translating to {googletrans.LANGUAGES[tr_lang]}\")\n",
-    "\n",
+    "print(f\"Translating to {googletrans.LANGUAGES[tr_lang]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['La cebra en la colina']\n"
+     ]
+    }
+   ],
+   "source": [
     "translations = translator.translate(sentences, dest=tr_lang)\n",
     "t_text = [t.text for t in translations]\n",
-    "print(t_text)\n",
-    "\n",
+    "print(t_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The zebra on the hill']\n"
+     ]
+    }
+   ],
+   "source": [
     "translations_en_random = translator.translate(t_text, src=tr_lang, dest='en')\n",
     "en_text = [t.text for t in translations_en_random]\n",
     "print(en_text)"
