--- a/Fast.ai/22p2/03_backprop.ipynb
+++ b/Fast.ai/22p2/03_backprop.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "H9x0Q_WfRhQ_"
       },
@@ -53,10 +53,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "nSMwxSUpRhQ_",
-        "outputId": "02bf99e7-c119-4a76-d3eb-734f4277edcb",
+        "outputId": "3c8b1eee-30c0-422b-f2cd-13db1fffdd38",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -70,7 +70,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 2
         }
       ],
       "source": [
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "kew88-OZRhRA"
       },
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "id": "EX7DPDirRhRA"
       },
@@ -107,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "id": "dtWsuoIIRhRA"
       },
@@ -118,10 +118,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 6,
       "metadata": {
         "id": "qhekI-y6RhRA",
-        "outputId": "5d2045d2-799d-4b21-8ade-d43cc443b8fd",
+        "outputId": "af32b691-1c17-4457-f761-4c99f9324ca5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -135,7 +135,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 6
         }
       ],
       "source": [
@@ -150,12 +150,12 @@
       ],
       "metadata": {
         "id": "6uy1_pDIUfqx",
-        "outputId": "a74dbdc5-6c73-48e1-f892-86c676832556",
+        "outputId": "06717eb4-4122-41af-fd09-d4796dd153a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,13 +171,13 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 9,
       "metadata": {
         "id": "RBIZrx1ORhRA"
       },
@@ -188,10 +188,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 10,
       "metadata": {
         "id": "kJO9Qdl5RhRB",
-        "outputId": "662fa518-311d-44a6-ffa5-4e36ffbdd3c5",
+        "outputId": "ffb0930e-efd9-4294-83ab-317feccc5cb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -211,7 +211,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 10
         }
       ],
       "source": [
@@ -221,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 11,
       "metadata": {
         "id": "sKORq8A_RhRB"
       },
@@ -235,10 +235,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 12,
       "metadata": {
         "id": "dv2N9jQyRhRB",
-        "outputId": "3da95fc0-6728-423e-eb21-61a311a555aa",
+        "outputId": "a4cf6e23-bba7-4af7-a06d-94098816854e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -252,7 +252,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 12
         }
       ],
       "source": [
@@ -280,21 +280,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "WTSHaQEzRhRB",
-        "outputId": "c45166e2-aa33-45c0-a6bf-63a75ec5aaf5"
+        "outputId": "3f19c5ba-8b58-42db-d706-6bd3971928f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(torch.Size([10000, 1]), torch.Size([10000]))"
             ]
           },
-          "execution_count": null,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 13
         }
       ],
       "source": [
@@ -303,21 +306,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "86L5ohSSRhRB",
-        "outputId": "b4acba03-1b2d-4401-f399-f08065024f9e"
+        "outputId": "1773260b-6017-4245-ce88-ab93bf414ffd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "torch.Size([10000, 10000])"
             ]
           },
-          "execution_count": null,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 14
         }
       ],
       "source": [
@@ -335,21 +341,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "rpIceNlaRhRB",
-        "outputId": "4cb800a0-ea1c-4693-c436-481c0dee822d"
+        "outputId": "671153b0-6a18-41f5-f6be-34afb50dbede",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "torch.Size([10000])"
             ]
           },
-          "execution_count": null,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 15
         }
       ],
       "source": [
@@ -358,21 +367,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "_QUf2O6PRhRB",
-        "outputId": "2ee9e217-f5eb-426f-d988-9b497090eb51"
+        "outputId": "8c130b12-9dfe-461b-ebbc-d3304e0ec4dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "torch.Size([10000])"
             ]
           },
-          "execution_count": null,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 16
         }
       ],
       "source": [
@@ -381,21 +393,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "mL49Q3TKRhRB",
-        "outputId": "8489e76b-cfc5-4ba6-bf96-165d651cbbe3"
+        "outputId": "d1b35c5f-dcbc-4493-fa91-5dfd4b4c53bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "torch.Size([10000])"
             ]
           },
-          "execution_count": null,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 17
         }
       ],
       "source": [
@@ -404,21 +419,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "rJO6iwvyRhRB",
-        "outputId": "a4cc7aa5-c77b-485c-ea66-eadc9b859a0e"
+        "outputId": "bab9a8b1-a60a-4ad9-e01e-2ab179e7c16c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "torch.Size([50000, 1])"
             ]
           },
-          "execution_count": null,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 19
         }
       ],
       "source": [
@@ -430,32 +448,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "NcNjgorzRhRC"
       },
       "outputs": [],
       "source": [
-        "def mse(output, targ): return (output[:,0]-targ).pow(2).mean()"
+        "def mse(output, targ): return (output.squeeze()-targ).pow(2).mean()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "TuVYDXETRhRC",
-        "outputId": "64e8145f-2bf6-4d68-d034-5c1d358503c0"
+        "outputId": "3ef0eaa2-6874-4c22-f2ff-4a0ad2208b56",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor(4308.76)"
             ]
           },
-          "execution_count": null,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 21
         }
       ],
       "source": [
@@ -473,24 +494,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "49r1JUOdRhRC",
-        "outputId": "f89ec552-37e1-45ee-c100-9dd67166ad7b"
+        "outputId": "a51ea5ea-d251-4bd2-d237-fb36bc6f0ea5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
-            "text/latex": [
-              "$\\displaystyle 2 x$"
-            ],
             "text/plain": [
               "2*x"
-            ]
+            ],
+            "text/latex": "$\\displaystyle 2 x$"
           },
-          "execution_count": null,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 22
         }
       ],
       "source": [
@@ -501,24 +524,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "SpPCoJ_JRhRC",
-        "outputId": "4070bfa7-1c5b-4496-f43e-ac2a17d9f096"
+        "outputId": "e0991cef-64c8-4453-df24-3b2296a97f68",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
-            "text/latex": [
-              "$\\displaystyle 6 x$"
-            ],
             "text/plain": [
               "6*x"
-            ]
+            ],
+            "text/latex": "$\\displaystyle 6 x$"
           },
-          "execution_count": null,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 23
         }
       ],
       "source": [
@@ -527,7 +552,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "diff(y**x**2, y)"
+      ],
+      "metadata": {
+        "id": "pEq6Tdvqcf4h",
+        "outputId": "80ab7890-6fed-47cb-870e-5f590ed50fe7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 60
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "x**2*y**(x**2)/y"
+            ],
+            "text/latex": "$\\displaystyle \\frac{x^{2} y^{x^{2}}}{y}$"
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
       "metadata": {
         "id": "sIgrwi39RhRC"
       },
@@ -542,7 +595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "FUgQgNT7RhRC"
       },
@@ -562,6 +615,15 @@
         "    l1.g = (l1>0).float() * l2.g\n",
         "    lin_grad(inp, l1, w1, b1)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "SjU19zBXpQTT"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
