--- a/Fast.ai/22p2/03_backprop.ipynb
+++ b/Fast.ai/22p2/03_backprop.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "H9x0Q_WfRhQ_"
       },
@@ -53,10 +53,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "nSMwxSUpRhQ_",
-        "outputId": "3c8b1eee-30c0-422b-f2cd-13db1fffdd38",
+        "outputId": "0c19a74e-e448-4811-f1d0-e029cd6b8758",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -70,7 +70,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ],
       "source": [
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "kew88-OZRhRA"
       },
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "EX7DPDirRhRA"
       },
@@ -107,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "id": "dtWsuoIIRhRA"
       },
@@ -118,10 +118,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "id": "qhekI-y6RhRA",
-        "outputId": "af32b691-1c17-4457-f761-4c99f9324ca5",
+        "outputId": "3a051a82-f7a7-4f82-c970-46dff092fd2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -135,7 +135,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ],
       "source": [
@@ -150,12 +150,12 @@
       ],
       "metadata": {
         "id": "6uy1_pDIUfqx",
-        "outputId": "06717eb4-4122-41af-fd09-d4796dd153a2",
+        "outputId": "9a4d4580-7404-418d-ea37-df218080cf1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +171,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -191,7 +191,7 @@
       "execution_count": 10,
       "metadata": {
         "id": "kJO9Qdl5RhRB",
-        "outputId": "ffb0930e-efd9-4294-83ab-317feccc5cb8",
+        "outputId": "ee3d66d6-20f1-4063-ef5d-5fe53882d80b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -238,7 +238,7 @@
       "execution_count": 12,
       "metadata": {
         "id": "dv2N9jQyRhRB",
-        "outputId": "a4cf6e23-bba7-4af7-a06d-94098816854e",
+        "outputId": "e3c99c26-ba5c-4864-ff3f-004168915c7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -283,7 +283,7 @@
       "execution_count": 13,
       "metadata": {
         "id": "WTSHaQEzRhRB",
-        "outputId": "3f19c5ba-8b58-42db-d706-6bd3971928f6",
+        "outputId": "e9e1a623-310e-4e49-ebb2-020f2c8ff4f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -309,7 +309,7 @@
       "execution_count": 14,
       "metadata": {
         "id": "86L5ohSSRhRB",
-        "outputId": "1773260b-6017-4245-ce88-ab93bf414ffd",
+        "outputId": "ce8d3cd0-1781-46a5-c8b5-1e7992c92012",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -344,7 +344,7 @@
       "execution_count": 15,
       "metadata": {
         "id": "rpIceNlaRhRB",
-        "outputId": "671153b0-6a18-41f5-f6be-34afb50dbede",
+        "outputId": "05f9f28d-1563-4f1f-d0ee-d1edb64807bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -370,7 +370,7 @@
       "execution_count": 16,
       "metadata": {
         "id": "_QUf2O6PRhRB",
-        "outputId": "8c130b12-9dfe-461b-ebbc-d3304e0ec4dd",
+        "outputId": "15beba5b-f1e0-4dc4-e13d-751e7636812c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -396,7 +396,7 @@
       "execution_count": 17,
       "metadata": {
         "id": "mL49Q3TKRhRB",
-        "outputId": "d1b35c5f-dcbc-4493-fa91-5dfd4b4c53bd",
+        "outputId": "1f5ec8fc-fb55-4114-ca10-cd9602615fca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -419,10 +419,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 18,
       "metadata": {
         "id": "rJO6iwvyRhRB",
-        "outputId": "bab9a8b1-a60a-4ad9-e01e-2ab179e7c16c",
+        "outputId": "78afd9ff-0036-4c30-e0d7-f263a6499833",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -436,7 +436,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 18
         }
       ],
       "source": [
@@ -448,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 19,
       "metadata": {
         "id": "NcNjgorzRhRC"
       },
@@ -459,10 +459,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 20,
       "metadata": {
         "id": "TuVYDXETRhRC",
-        "outputId": "3ef0eaa2-6874-4c22-f2ff-4a0ad2208b56",
+        "outputId": "fbdff25d-499b-4e73-9197-dafa5ee9db56",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -476,7 +476,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 20
         }
       ],
       "source": [
@@ -494,10 +494,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 21,
       "metadata": {
         "id": "49r1JUOdRhRC",
-        "outputId": "a51ea5ea-d251-4bd2-d237-fb36bc6f0ea5",
+        "outputId": "05eb08d3-edc4-4ab9-8e84-9efdbdecdee8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 39
@@ -513,7 +513,7 @@
             "text/latex": "$\\displaystyle 2 x$"
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 21
         }
       ],
       "source": [
@@ -524,10 +524,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 22,
       "metadata": {
         "id": "SpPCoJ_JRhRC",
-        "outputId": "e0991cef-64c8-4453-df24-3b2296a97f68",
+        "outputId": "679b73c5-db92-481f-8dec-77b3b70381e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 39
@@ -543,7 +543,7 @@
             "text/latex": "$\\displaystyle 6 x$"
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 22
         }
       ],
       "source": [
@@ -563,7 +563,7 @@
           "height": 60
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -580,7 +580,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 36,
       "metadata": {
         "id": "sIgrwi39RhRC"
       },
@@ -589,13 +589,15 @@
         "def lin_grad(inp, out, w, b):\n",
         "    # grad of matmul with respect to input\n",
         "    inp.g = out.g @ w.t()\n",
-        "    w.g = (inp.unsqueeze(-1) * out.g.unsqueeze(1)).sum(0)\n",
+        "    i, o = inp.unsqueeze(-1), out.g.unsqueeze(1)\n",
+        "    # import pdb; pdb.set_trace()\n",
+        "    w.g = inp.T@out.g\n",
         "    b.g = out.g.sum(0)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 37,
       "metadata": {
         "id": "FUgQgNT7RhRC"
       },
@@ -618,16 +620,7 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "SjU19zBXpQTT"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "id": "2bJI_AzpRhRC"
       },
@@ -638,7 +631,78 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "w1.g, x_train.g"
+      ],
+      "metadata": {
+        "id": "0n24yaXMulsY",
+        "outputId": "4b0c67c1-0901-4c1c-9f8f-aba28e69cb94",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
+              "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+              "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+              "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+              "         [0., 0., 0.,  ..., 0., 0., 0.]]),\n",
+              " tensor([[    -0.00,     -0.01,      0.00,  ...,     -0.00,      0.00,      0.00],\n",
+              "         [    -0.03,     -0.03,      0.01,  ...,     -0.04,     -0.01,     -0.01],\n",
+              "         [     0.00,      0.00,     -0.00,  ...,      0.00,     -0.00,      0.00],\n",
+              "         ...,\n",
+              "         [    -0.00,     -0.02,      0.01,  ...,     -0.00,     -0.00,      0.00],\n",
+              "         [    -0.02,     -0.01,      0.01,  ...,     -0.01,      0.01,     -0.00],\n",
+              "         [    -0.00,     -0.00,      0.00,  ...,     -0.00,     -0.00,     -0.00]]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train.g.zero_()"
+      ],
+      "metadata": {
+        "id": "U6JH_zabvWUZ",
+        "outputId": "6d0be449-c3a7-43f9-ed19-8db2029b89d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
+              "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+              "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+              "        ...,\n",
+              "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+              "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+              "        [0., 0., 0.,  ..., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 40,
       "metadata": {
         "id": "65tEsKm9RhRC"
       },
@@ -661,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "id": "GQ5Pl7AlRhRC"
       },
@@ -673,7 +737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
         "id": "ohyCVMVKRhRC"
       },
@@ -688,7 +752,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
         "id": "FLmkpzqGRhRC"
       },
@@ -700,7 +764,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
         "id": "0nEpX6DoRhRC"
       },
@@ -729,7 +793,18 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "_XSvL5rawbc7"
+      },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
       "metadata": {
         "id": "Rgu4HovJRhRD"
       },
@@ -746,7 +821,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
         "id": "5oFNqdpURhRD"
       },
@@ -768,7 +843,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
         "id": "zS6bpZGmRhRD"
       },
@@ -781,12 +856,12 @@
         "        return self.out\n",
         "\n",
         "    def backward(self):\n",
-        "        self.inp.g = 2. * (self.inp.squeeze() - self.targ).unsqueeze(-1) / self.targ.shape[0]"
+        "        self.inp.g = 2. * (self.inp.squeeze() - self.targ).unsqueeze(-1) / self.targ.shape[0] # (2/n) * (y-yˆ)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {
         "id": "shbfn61ORhRD"
       },
@@ -797,8 +872,11 @@
         "        self.layers = [Lin(w1,b1), Relu(), Lin(w2,b2)]\n",
         "        self.loss = Mse()\n",
         "\n",
-        "    def __call__(self, x, targ):\n",
+        "    def __call__(self, x, targ): # can be forward\n",
         "        for l in self.layers: x = l(x)\n",
+        "        # self.preds = x\n",
+        "        # self.final_loss = self.loss(x, targ)\n",
+        "        # return self.final_loss\n",
         "        return self.loss(x, targ)\n",
         "\n",
         "    def backward(self):\n",
@@ -808,7 +886,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
         "id": "oK0-dGbPRhRD"
       },
@@ -819,7 +897,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
         "id": "DP9MmznIRhRD"
       },
@@ -830,7 +908,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "id": "CR9wLU9ORhRD"
       },
@@ -841,7 +919,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "id": "nHmbrL5mRhRD"
       },
@@ -865,7 +943,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {
         "id": "vsGky6_FRhRD"
       },
@@ -884,7 +962,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {
         "id": "hhNxEJl3RhRD"
       },
@@ -897,7 +975,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {
         "id": "kbEBhltjRhRD"
       },
@@ -914,7 +992,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {
         "id": "xZFWZu_RRhRD"
       },
@@ -927,7 +1005,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
         "id": "_f5A6NOoRhRD"
       },
@@ -938,7 +1016,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {
         "id": "of4hAn1hRhRD"
       },
@@ -949,7 +1027,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {
         "id": "xfgITMpcRhRE"
       },
@@ -960,7 +1038,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "id": "Eo9-4ZePRhRE"
       },
@@ -984,7 +1062,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
         "id": "vQvkitzdRhRE"
       },
@@ -996,7 +1074,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {
         "id": "5r3MnY21RhRE"
       },
@@ -1012,7 +1090,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
         "id": "UlcjH4ibRhRE"
       },
@@ -1030,7 +1108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {
         "id": "02XqONZnRhRE"
       },
@@ -1043,13 +1121,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
         "id": "R_lYs0IjRhRE",
-        "outputId": "f342bf88-1aee-4fec-a8bc-14aff1e12141"
+        "outputId": "37744e91-b7c8-4eaf-a278-79b366c6a676",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor([-19.60,  -2.40,  -0.12,   1.99,  12.78, -15.32, -18.45,   0.35,   3.75,  14.67,  10.81,  12.20,  -2.95, -28.33,\n",
@@ -1058,9 +1140,8 @@
               "        -62.51,  -1.89,  -1.41,   7.00,   0.49,  18.72,  -4.84,  -6.52])"
             ]
           },
-          "execution_count": null,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 65
         }
       ],
       "source": [
